# csim

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  FindSystemC.cmake  README.md  generate_eclipse_build.sh  osiderived.cpp
3rd/: CMakeLists.txt
config/: filter_loopback_80211n_codes.json  filter_loopback_80216_codes.json  uncrustify.cfg
data/cicdata/: cic_data_out.csv
data/ddc/: ddc_in.csv  ddc_out.csv  ddc_out.txt  ddc_out_new.txt  duc_loopback_in.csv  uniform_white_noise.csv  uniform_white_noise_half.csv  uniform_white_noise_quarter.csv
data/fft/: test_signal_10Eb_N0.csv  test_signal_15Eb_N0.csv  test_signal_20Eb_N0.csv  test_signal_5Eb_N0.csv  test_signal_all_ones.csv  test_signal_gaussian_0db.csv  test_signal_impulse.csv  (+1 more)
plotters/: plotRF.py
scripts/: generate_eclipse_build.sh
src/: CMakeCache.txt  CMakeLists.txt  Stitcher.cpp  Stitcher.h  abstract_radio.hpp  abstract_siso.hpp  aluverifier.cpp  benfilter.cpp  block_chain.hpp  block_chain_element.hpp  butterfly_two_pt.cpp  butterfly_two_pt.h  cic.cpp  cic.h  client.cpp  complex_alu.cpp  complex_alu.h  complex_to_fixed.hpp  cordic.cpp  cordic.h  cordictester.cpp  driver.cpp  driver.h  dummy_block_element.hpp  dummy_filter_element.hpp  filter.cpp  filter_chain.cpp  filter_chain.hpp  filter_chain_element.cpp  filter_chain_element.hpp  firfilter.cpp  fixed_to_byte.hpp  fixedcomplex.cpp  fixedcomplex.cpp.orig  fixedcomplex.h  fixedcomplex.h.orig  fixedfft.cpp  fixedfft.h  fixedfft_main.cpp  fixedfir.cpp  (+36 more)
src/3rd/: CMakeLists.txt
src/apps/: CFO_estimation.cpp  CMakeLists.txt  README.md  ber_tester.cpp  ber_tester1.cpp  ber_tester2.cpp  ber_tester3.cpp  complex_gaussian_generator.cpp  complex_multiplier.cpp  ddc_loopback.cpp  fft_runner.cpp  filter_loopback.cpp  filter_loopback_80211n_codes.json  filter_loopback_80216_codes.json  ldpc_analysis.cpp  ldpc_decode.cpp  print_twiddle.cpp  retrosim.cpp  retrosim_params.hpp  ryan_test_app.cpp  timing_alignment.cpp
src/channel/: CMakeLists.txt  pathloss.cpp  pathloss.hpp  sui.cpp  sui.hpp
src/channel/utests/: CMakeLists.txt  test_pathloss.cpp
src/core/: CMakeLists.txt  filter_chain.cpp  filter_chain.hpp  filter_chain_element.cpp  filter_chain_element.hpp  filter_probe.cpp  filter_probe.hpp  logger.cpp  logger.hpp  parameters.cpp  parameters.hpp  publisher.cpp  publisher.hpp  radio_s.cpp  radio_s.hpp  radio_s_factory.cpp  radio_set.cpp  radio_set.hpp  sigworld.cpp  sigworld.hpp
src/core/utests/: CMakeLists.txt  test_filter_probe.cpp  test_fixed_logger.cpp  test_parameters.cpp  test_radio.cpp
src/filters/: CMakeLists.txt  FixedFIR.cpp  automatic_gain.hpp  bfp_fft.cpp  bfp_fft.hpp  biquad.cpp  biquad.hpp  biquad_iir.cpp  biquad_iir.hpp  boost_pywrap.cpp  boost_pywrap.hpp  channel_equalizer.cpp  channel_equalizer.hpp  cic.cpp  cic.h  cic.hpp  complex_to_fixed.hpp  cyclic_prefix.cpp  cyclic_prefix.hpp  ddc.cpp  ddc.hpp  decimator.cpp  decimator.hpp  demapper.cpp  demapper.hpp  depuncture.cpp  depuncture.hpp  duc.cpp  duc.hpp  dummy_filter_element.hpp  fft.cpp  fft.hpp  fixed_cic.cpp  fixed_cic.hpp  fixed_fir.cpp  fixed_fir.hpp  fixed_iir.cpp  fixed_iir.hpp  fixed_to_byte.hpp  fixedfft.cpp  (+58 more)
src/filters/ddc_duc/: ddc.cpp  ddc.hpp  ddc_utils.cpp  ddc_utils.hpp  duc.cpp  duc.hpp
src/filters/utests/: CMakeLists.txt  test_biquad.cpp  test_cic.cpp  test_cyclic_prefix.cpp  test_ddc.cpp  test_demapper.cpp  test_fft.cpp  test_fft_and_ifft.cpp  test_fir.cpp  test_fixedFFT.cpp  test_fixedfft.cpp  test_fixedifft.cpp  test_floatfft.cpp  test_iir.cpp  test_ldpc.cpp  test_mapper.cpp  test_modulator.cpp  test_ofdm_frame_sync.cpp  test_puncture.cpp  test_scrambler.cpp  test_stitch.cpp  test_stitcher.cpp  test_subcarrier_mapper.cpp  test_xcorrelator.cpp  test_zero_pad_interpolator.cpp
src/interfaces/: abstract_radio.hpp
src/mathlib/: CMakeLists.txt  complex_gaussian_noise.cpp  complex_gaussian_noise.hpp  cordic.cpp  cordic.h  cordic.hpp  radio_physics.cpp  radio_physics.hpp
src/mathlib/utests/: CMakeLists.txt  test_cordic.cpp  test_radio_physics.cpp
src/messages/: rf_sample.hpp
src/mex/: CMakeLists.txt  csim.cpp  csim.hpp  example.m  mex_utils.c  mex_utils.h
src/oct/: Makefile  oct_fixedfir.cpp
src/probes/: CMakeLists.txt  level_trigger.cpp  level_trigger.hpp  sample_count_trigger.hpp  tick_count_trigger.hpp  triggerplot.hpp
src/stale/: alu_verifier.cpp  benfilter.cpp  complex_to_fixed.hpp  fixed_to_byte.hpp  fixedifft.cpp  fixedifft.hpp  floatfft.cpp  floatfft.hpp  oldfixedfft.cpp  oldfixedifft.cpp  oldfixedifft.hpp  oldtestifft.cpp  osibase.cpp  osibase.h  osiderived.cpp  pipefft.cpp  test_fixedcomplex.cpp  test_floatfft.cpp
src/systemc/: CMakeLists.txt  butterfly_two_pt.cpp  butterfly_two_pt.hpp  complex_alu.cpp  driver.cpp  fixedfft_main.cpp  memory.cpp  memory.hpp  monitor.cpp  syscfft.cpp  syscfft.h  syscfft.hpp  twiddler.cpp  twiddler.hpp
src/test/: CMakeLists.txt  run_tests.sh  unit_test.hpp  utest_params.hpp  utests_main.cpp
src/types/: CMakeLists.txt  circularbuffer.hpp  complexdouble.hpp  filter_io.cpp  filter_io.hpp  fixedcomplex.cpp  fixedcomplex.hpp  fixedpoint.cpp  fixedpoint.hpp
src/types/utests/: CMakeLists.txt  test_circularbuffer.cpp  test_fixedcomplex.cpp  test_fixedpoint.cpp  test_slfixedcomplex.cpp  test_slfixedpoint.cpp
src/utests/: CMakeLists.txt  cordictester.cpp  test.cpp  test_floatfft.cpp  testcic.cpp  testfir.cpp  testiir.cpp  testradio.cpp  teststitch.cpp
src/utils/: CMakeLists.txt  filter_timer.cpp  filter_timer.hpp  frame_gen.cpp  frame_gen.hpp  ldpc_utils.hpp  mcs.cpp  mcs.hpp  plotter.cpp  plotter.hpp  radio_utils.cpp  radio_utils.hpp  scrambler.cpp  scrambler.hpp  shift_register.cpp  shift_register.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
src/utils/utests/: CMakeLists.txt  test_frame_gen.cpp  test_mcs.cpp  test_plotter.cpp  test_scrambler.cpp  test_timer.cpp  test_utils.cpp
src/verilog_tests/: CMakeLists.txt  alu_verifier.cpp  aluverifier.cpp  cic_verifier.cpp  cordic_verifier.cpp  fft_verifier.cpp  fir_verifier.cpp  ifft_verifier.cpp  iir_verifier.cpp  oldtestfft.cpp  testfft.cpp  testifft.cpp
(+103 files in other folders)
